overflow fixed git sigin

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -638,9 +638,8 @@ a {
   color: #435f7a;
 }
 #frame .chat-content .messages {
-  height: auto;
-  min-height: calc(100% - 93px);
-  max-height: calc(100% - 93px);
+  height: 50vh;
+  width: 100%;
   padding-top: 20px;
   overflow-y: scroll;
   overflow-x: hidden;
